# pentagi-taxonomy

./: .gitignore  LICENSE  Makefile  README.md  plan.md  version.yml
codegen/: requirements.txt
codegen/go/: generate.py
codegen/python/: generate.py
codegen/shared/: validator.py
codegen/templates/go/: entities.go.j2  go.mod.j2  validators.go.j2
codegen/templates/python/: __init__.py.j2  edges.py.j2  entity_map.py.j2  nodes.py.j2
codegen/templates/typescript/: index.ts.j2  package.json.j2  schemas.ts.j2  tsconfig.json.j2
codegen/typescript/: generate.py
tmp/go/: README.md  go.mod  main.go
tmp/py/: README.md  TEST_RESULTS.md  run_tests.sh  test_v1.py  test_v2.py
tmp/ts/: README.md  package-lock.json  package.json  tsconfig.json
tmp/ts/src/: index.ts
v1/: entities.yml
v1/go/: README.md  go.mod
v1/go/entities/: entities.go  validators.go
v1/python/: README.md  pyproject.toml
v1/python/pentagi_taxonomy/: __init__.py  edges.py  entity_map.py  nodes.py
v1/python/tests/: test_generated_code.py
v1/typescript/: README.md  package.json
v1/typescript/src/: index.ts  schemas.ts
v2/: entities.yml
v2/go/: README.md  go.mod
v2/go/entities/: entities.go  validators.go
v2/python/: README.md  pyproject.toml
v2/python/pentagi_taxonomy/: __init__.py  edges.py  entity_map.py  nodes.py
v2/python/tests/: test_generated_code.py
v2/typescript/: README.md  package.json
v2/typescript/src/: index.ts  schemas.ts
